deployments/templates/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cats-deployment
  labels:
    app: cats
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cats # this should match the selector in service.yml
  template:
    metadata:
      labels:
        app: cats # this should match the selector in service.yml
    spec:
      serviceAccountName: ${NAMESPACE}
      containers:
        - name: cats
          image: ${REGISTRY}/${REPOSITORY}:${IMAGE_TAG}
          ports:
            - containerPort: 8080
